-------------------------------------------------------------------------------
Changes in version 1.21

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.20

- Added Lua scripting plugin (optional, build with 'make lua').

- Modified the qmail backend to evaluate $QMAILQUEUE as late as possible.
  This allows more options for changing $QMAILQUEUE in plugins.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.18

- Added support for running Dovecot IMAP from imapfront-auth.
  See imapfront.html for details on how to set this up.

- Moved more trivial plugins into builtins.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.17

- Added support for rejecting whole messages when the recipient count is
  exceeded in plugin-counters.

- Made the check-fqdn plugin explicitly reject empty recipients.

- Added a sender domain restriction to the check-fqdn plugin.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.16

- Added missing plugin-spamassassin.so to installation.

- Fix bug in handling invalid message numbers in retrieving messages in
  pop3front-maildir.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.15
